# mercurio-examples

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  EXAMPLES_DESCRIPTOR.md  README.md
desktop/project-plugin-pacti-analysis/: README.md
desktop/structural-connectivity/: .project.json  README.md
desktop/voron-trident-simulation/: README.md
model-graph-analysis/: .project.json  README.md  mercurio.lock.json  new_model.ipynb
project-plugin-pacti-analysis/: .project.json  README.md  mercurio.extensions.json
python/: 04_query_snapshot.py  05_edit_existing_project.py  07_analysis_case.py  README.md  _common.py  simulation_support.py
python-edit-existing/: .project.json  edit_model.py  transaction_query_writeback.py
python-pilot-authoring/: .project.json  README.md  build_metadata_example.py  build_state_definition_example.py  verify_equivalence.py
python-stdlib-authoring/: .project.json  README.md  build_model.py
rust/graph-analysis/: Cargo.toml
rust/graph-analysis/src/: lib.rs  main.rs
rust/graph-analysis/tests/: analysis.rs
rust/simple-language/: Cargo.toml
rust/simple-language/src/: lib.rs
rust/simple-language/tests/: host_registration.rs
rust/sysml-environment/: Cargo.toml
rust/sysml-environment/src/: main.rs
rust/sysml-environment/tests/: compile_sysml.rs
simple-language/: Cargo.toml  README.md
structural-connectivity/: .project.json  mercurio.extensions.json
sysml-environment/: Cargo.toml
sysml-environment/src/: main.rs
sysml-environment/tests/: compile_sysml.rs
vehicle-mass-compliance/: README.md
voron-trident-simulation/: .project.json  Cargo.toml  README.md  mercurio.extensions.json  run.ps1
voron-trident-simulation/assets/: voron-trident-350.glb
voron-trident-simulation/model/: voron-trident-350.sysml
voron-trident-simulation/sim/: demo.py  demo_qt.py  diag.py  inspect_trace.py  launch.py  requirements.txt  test_api.py  view.py  voron.sim3d.json  voron.sim3d.yaml
voron-trident-simulation/src/: main.rs
(+69 files in other folders)
