[package]
name = "mercurio-sysml-environment-example"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
mercurio-sysml = { path = "../../mercurio-sysml/crates/mercurio-sysml" }

[dev-dependencies]
mercurio-core = { package = "mercurio-foundation", path = "../../mercurio-foundation/crates/mercurio-foundation" }
