[package]
name    = "mercurio-voron-trident-simulation-example"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "voron-trident-simulation"
path = "src/main.rs"

[dependencies]
mercurio-sysml = { path = "../../mercurio-sysml/crates/mercurio-sysml" }
mercurio-core  = { path = "../../mercurio-foundation/crates/mercurio-foundation", package = "mercurio-foundation" }
serde_json     = "1.0"
