[package]
name = "mercurio-graph-analysis-example"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
mercurio-core = { path = "../../../mercurio-foundation/crates/mercurio-core" }
mercurio-sysml = { path = "../../../mercurio-sysml/crates/mercurio-sysml" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
