[package]
name = "mercurio-simple-language"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
mercurio-kir = { path = "../../../mercurio-foundation/crates/mercurio-kir" }
mercurio-language-contracts = { path = "../../../mercurio-foundation/crates/mercurio-language-contracts" }
serde_json = "1.0"

